--- a/dein/input.toml
+++ b/dein/input.toml
@@ -13,19 +13,6 @@ hook_add = '''
 hook_source = '''
 	let g:deoplete#enable_at_startup = g:true
 
-	" 大文字と小文字を区別しない
-	let g:deoplete#enable_ignore_case = g:true
-	" 大文字と小文字が混在してる場合は区別する
-	let g:deoplete#enable_smart_case = g:true
-	" 要素語の最初を大文字
-	let g:deoplete#enable_camel_case = g:true
-
-	" 自動で候補を更新
-	let g:deoplete#enable_refresh_always = g:true
-
-	" The list of skip characters in the auto completion.
-	let g:deoplete#skip_chars = ['(', ')']
-
 	" <TAB>: completion.
 	inoremap <silent><expr> <TAB> pumvisible() ? "\<C-n>" : <SID>check_back_space() ? "\<TAB>" : deoplete#mappings#manual_complete()
 	function! s:check_back_space() abort
@@ -45,12 +32,9 @@ hook_source = '''
 
 	" <CR>: close popup and save indent.
 	inoremap <silent> <CR> <C-r>=<SID>my_cr_function()<CR>
-		function! s:my_cr_function() abort
+	function! s:my_cr_function() abort
 		return deoplete#close_popup() . "\<CR>"
 	endfunction
-
-	" ': ポップアップメニューを閉じる
-	inoremap <expr> ' pumvisible() ? deoplete#close_popup() : "'"
 
 	" converters
 	call deoplete#custom#source('_', 'converters', [
@@ -61,6 +45,8 @@ hook_source = '''
 	\ 	'converter_truncate_menu',
 	\ 	'converter_auto_delimiter',
 	\ ])
+
+	call deoplete#custom#source('_', 'matchers', ['matcher_fuzzy', 'matcher_length'])
 '''
 
 [[plugins]]
