--- a/dein/lazy.toml
+++ b/dein/lazy.toml
@@ -82,6 +82,7 @@ on_path = '.*'
 [[plugins]]
 repo ='Shougo/defx.nvim'
 on_cmd = 'Defx'
+depends = ['defx-icons', 'defx-git']
 hook_add = '''
 	nnoremap <silent> <Space>f :<C-u>Defx -listed -resume -buffer-name=tab`tabpagenr()`<CR>
 '''
@@ -123,6 +124,8 @@ nnoremap <silent><buffer><expr> <Space> defx#do_action('toggle_select') . 'j'
 nnoremap <silent><buffer><expr> <CR> defx#do_action('open')
 nnoremap <silent><buffer><expr> q defx#do_action('quit')
 
+nnoremap <silent><buffer><expr> o defx#async_action('open_or_close_tree')
+nnoremap <silent><buffer><expr> O defx#async_action('open_tree_recursive')
 
 nnoremap <silent><buffer><expr> ! defx#do_action('execute_command')
 nnoremap <silent><buffer><expr> * defx#do_action('toggle_select_all')
@@ -132,7 +135,6 @@ nnoremap <silent><buffer><expr> E defx#do_action('open', 'vsplit')
 nnoremap <silent><buffer><expr> K defx#do_action('new_directory')
 nnoremap <silent><buffer><expr> M defx#do_action('new_multiple_files')
 nnoremap <silent><buffer><expr> N defx#do_action('new_file')
-nnoremap <silent><buffer><expr> O defx#async_action('open_tree_recursive')
 nnoremap <silent><buffer><expr> P defx#do_action('open', 'pedit')
 nnoremap <silent><buffer><expr> S defx#do_action('toggle_sort', 'Time')
 nnoremap <silent><buffer><expr> c defx#do_action('copy')
