--- a/dein/lazy.toml
+++ b/dein/lazy.toml
@@ -87,65 +87,65 @@ hook_add = '''
 	nnoremap <silent> <Space>f :<C-u>Defx -listed -resume -buffer-name=tab`tabpagenr()`<CR>
 '''
 hook_source = '''
-function! Root(path) abort
-	return fnamemodify(a:path, ':t')
-endfunction
+	function! Root(path) abort
+		return fnamemodify(a:path, ':t')
+	endfunction
 
-call defx#custom#source('file', {
-		\ 'root': 'Root',
-		\})
+	call defx#custom#source('file', {
+			\ 'root': 'Root',
+			\})
 
-call defx#custom#column('filename', {
-		\ 'directory_icon': '',
-		\ 'opened_icon': '',
-		\ })
+	call defx#custom#column('filename', {
+			\ 'directory_icon': '',
+			\ 'opened_icon': '',
+			\ })
 
-call defx#custom#column('mark', {
-		\ 'readonly_icon': '✗',
-		\ 'selected_icon': '✓',
-		\ })
+	call defx#custom#column('mark', {
+			\ 'readonly_icon': '✗',
+			\ 'selected_icon': '✓',
+			\ })
 
-call defx#custom#option('_', {
-		\ 'columns': 'indent:git:icons:filename',
-		\ 'show_ignored_files': 1,
-		\ })
+	call defx#custom#option('_', {
+			\ 'columns': 'indent:git:icons:filename',
+			\ 'show_ignored_files': 1,
+			\ })
 '''
 [plugins.ftplugin]
 defx = '''
-nnoremap <silent><buffer><expr> ~ defx#async_action('cd')
-nnoremap <silent><buffer><expr> h defx#async_action('cd', ['..'])
-nnoremap <silent><buffer><expr> j line('.') == line('$') ? 'gg' : 'j'
-nnoremap <silent><buffer><expr> k line('.') == 1 ? 'G' : 'k'
-nnoremap <silent><buffer><expr> l defx#async_action('open')
+	nnoremap <silent><buffer><expr> ~ defx#async_action('cd')
+	nnoremap <silent><buffer><expr> h defx#async_action('cd', ['..'])
+	nnoremap <silent><buffer><expr> j line('.') == line('$') ? 'gg' : 'j'
+	nnoremap <silent><buffer><expr> k line('.') == 1 ? 'G' : 'k'
+	nnoremap <silent><buffer><expr> l defx#async_action('open')
 
-nnoremap <silent><buffer><expr> . defx#do_action('toggle_ignored_files')
-nnoremap <silent><buffer><expr> <Tab> winnr('$') != 1 ? ':<C-u>wincmd w<CR>' : ':<C-u>Defx -buffer-name=temp -split=vertical<CR>'
-nnoremap <silent><buffer><expr> <Space> defx#do_action('toggle_select') . 'j'
-nnoremap <silent><buffer><expr> <CR> defx#do_action('open')
-nnoremap <silent><buffer><expr> q defx#do_action('quit')
+	nnoremap <silent><buffer><expr> . defx#do_action('toggle_ignored_files')
+	nnoremap <silent><buffer><expr> <Tab> winnr('$') != 1 ? ':<C-u>wincmd w<CR>' : ':<C-u>Defx -buffer-name=temp -split=vertical<CR>'
+	nnoremap <silent><buffer><expr> <Space> defx#do_action('toggle_select') . 'j'
+	nnoremap <silent><buffer><expr> <CR> defx#do_action('open')
+	nnoremap <silent><buffer><expr> q defx#do_action('quit')
 
-nnoremap <silent><buffer><expr> o defx#async_action('open_or_close_tree')
-nnoremap <silent><buffer><expr> O defx#async_action('open_tree_recursive')
+	nnoremap <silent><buffer><expr> o defx#async_action('open_or_close_tree')
+	nnoremap <silent><buffer><expr> O defx#async_action('open_tree_recursive')
 
-nnoremap <silent><buffer><expr> ! defx#do_action('execute_command')
-nnoremap <silent><buffer><expr> * defx#do_action('toggle_select_all')
-nnoremap <silent><buffer><expr> <C-g> defx#do_action('print')
-nnoremap <silent><buffer><expr> <C-l> defx#do_action('redraw')
-nnoremap <silent><buffer><expr> E defx#do_action('open', 'vsplit')
-nnoremap <silent><buffer><expr> K defx#do_action('new_directory')
-nnoremap <silent><buffer><expr> M defx#do_action('new_multiple_files')
-nnoremap <silent><buffer><expr> N defx#do_action('new_file')
-nnoremap <silent><buffer><expr> P defx#do_action('open', 'pedit')
-nnoremap <silent><buffer><expr> S defx#do_action('toggle_sort', 'Time')
-nnoremap <silent><buffer><expr> c defx#do_action('copy')
-nnoremap <silent><buffer><expr> d defx#do_action('remove_trash')
-nnoremap <silent><buffer><expr> m defx#do_action('move')
-nnoremap <silent><buffer><expr> p defx#do_action('paste')
-nnoremap <silent><buffer><expr> r defx#do_action('rename')
-nnoremap <silent><buffer><expr> se defx#do_action('save_session')
-nnoremap <silent><buffer><expr> sl defx#do_action('load_session')
-nnoremap <silent><buffer><expr> x defx#do_action('execute_system')
-nnoremap <silent><buffer><expr> yy defx#do_action('yank_path')
+	nnoremap <silent><buffer><expr> ! defx#do_action('execute_command')
+	nnoremap <silent><buffer><expr> * defx#do_action('toggle_select_all')
+	nnoremap <silent><buffer><expr> <C-g> defx#do_action('print')
+	nnoremap <silent><buffer><expr> <C-l> defx#do_action('redraw')
+	nnoremap <silent><buffer><expr> E defx#do_action('open', 'vsplit')
+	nnoremap <silent><buffer><expr> K defx#do_action('new_directory')
+	nnoremap <silent><buffer><expr> M defx#do_action('new_multiple_files')
+	nnoremap <silent><buffer><expr> N defx#do_action('new_file')
+	nnoremap <silent><buffer><expr> P defx#do_action('open', 'pedit')
+	nnoremap <silent><buffer><expr> S defx#do_action('toggle_sort', 'Time')
+	nnoremap <silent><buffer><expr> c defx#do_action('copy')
+	nnoremap <silent><buffer><expr> d defx#do_action('remove_trash')
+	nnoremap <silent><buffer><expr> m defx#do_action('move')
+	nnoremap <silent><buffer><expr> p defx#do_action('paste')
+	nnoremap <silent><buffer><expr> r defx#do_action('rename')
+	nnoremap <silent><buffer><expr> se defx#do_action('save_session')
+	nnoremap <silent><buffer><expr> sl defx#do_action('load_session')
+	nnoremap <silent><buffer><expr> x defx#do_action('execute_system')
+	nnoremap <silent><buffer><expr> yy defx#do_action('yank_path')
 '''
 
 [[plugins]]
@@ -154,14 +154,96 @@ repo = 'ress997/defx-icons'
 [[plugins]]
 repo ='kristijanhusak/defx-git'
 hook_add = '''
-let g:defx_git#indicators = {
-	\ 'Modified'  : '+',
-	\ 'Staged'    : '●',
-	\ 'Untracked' : '?',
-	\ 'Renamed'   : '➜',
-	\ 'Unmerged'  : '═',
-	\ 'Deleted'   : 'x',
-	\ 'Unknown'   : '?'
-	\ }
+	let g:defx_git#indicators = {
+		\ 'Modified'  : '+',
+		\ 'Staged'    : '●',
+		\ 'Untracked' : '?',
+		\ 'Renamed'   : '➜',
+		\ 'Unmerged'  : '═',
+		\ 'Deleted'   : 'x',
+		\ 'Unknown'   : '?'
+		\ }
+'''
+# }}}
+# denite {{{
+[[plugins]]
+repo = 'Shougo/denite.nvim'
+if = 'has("python3")'
+on_cmd = 'Denite'
+hook_add = '''
+	nnoremap [denite] <Nop>
+	nmap [Space]d [denite]
+	nnoremap <silent> [denite]b :<C-u>Denite buffer<CR>
+	nnoremap <silent> [denite]f :<C-u>Denite file/rec -mode=normal<CR>
+	nnoremap <silent> [denite]g :<C-u>Denite grep<CR>
+	" 以前のバッファを再表示する
+	nnoremap <silent> [denite]r :<C-u>Denite -resume<CR>
+	" 以前のバッファで次の候補を即座に開く
+	nnoremap <silent> [denite]n :<C-u>Denite -resume -immediately -cursor-pos=+1 <CR>
+	" 以前のバッファで前の候補を即座に開く
+	nnoremap <silent> [denite]p :<C-u>Denite -resume -immediately -cursor-pos=-1<CR>
+'''
+hook_post_source = '''
+	" Change default prompt
+	call denite#custom#option('default', 'prompt', '>')
+	" カーソルキーで移動
+	call denite#custom#map('normal', '<Up>', '<denite:move_to_previous_line>', 'noremap')
+	call denite#custom#map('insert', '<Up>', '<denite:move_to_previous_line>', 'noremap')
+	call denite#custom#map('normal', '<Down>', '<denite:move_to_next_line>', 'noremap')
+	call denite#custom#map('insert', '<Down>', '<denite:move_to_next_line>', 'noremap')
+	" <C-t>: tabopen
+	call denite#custom#map('insert', "<C-t>", '<denite:do_action:tabopen>')
+	" file/rec {{{
+	if executable('fd')
+		" fd --follow --hidden --exclude '.git' --type f
+		call denite#custom#var('file/rec', 'command', ['fd', '--follow', '--hidden', '--exclude', '.git', '--type', 'f', ''])
+	elseif executable('rg')
+		call denite#custom#var('file/rec', 'command', ['rg', '--files', '--hidden', '--glob', '!.git'])
+	endif
+	" }}}
+	" grep {{{
+	if executable('rg')
+		call denite#custom#var('grep', 'command', ['rg'])
+		call denite#custom#var('grep', 'default_opts', ['--vimgrep', '--no-heading'])
+		call denite#custom#var('grep', 'recursive_opts', [])
+		call denite#custom#var('grep', 'pattern_opt', ['--regexp'])
+		call denite#custom#var('grep', 'separator', ['--'])
+		call denite#custom#var('grep', 'final_opts', [])
+	elseif executable('pt')
+		call denite#custom#var('grep', 'command', ['pt'])
+		call denite#custom#var('grep', 'default_opts', ['--nogroup', '--nocolor', '--smart-case'])
+		call denite#custom#var('grep', 'recursive_opts', [])
+		call denite#custom#var('grep', 'pattern_opt', [])
+		call denite#custom#var('grep', 'separator', ['--'])
+		call denite#custom#var('grep', 'final_opts', [])
+	endif
+	" }}}
+	" menu {{{
+	let s:menus = {}
+	let s:menus.file = {}
+	let s:menus.file.description = 'File search (buffer, file, file_rec, file_mru'
+	let s:menus.file.command_candidates = [
+	\ ['buffer', 'Denite buffer'],
+	\ ['file: Files in the current directory', 'Denite file'],
+	\ ['file_rec: Files, recursive list under the current directory', 'Denite file_rec'],
+	\ ['file_mru: Most recently used files', 'Denite file_mru']
+	\ ]
+	let s:menus.line = {}
+	let s:menus.line.description = 'Line search (change, grep, line, tag'
+	let s:menus.line.command_candidates = [
+	\ ['change', 'Denite change'],
+	\ ['grep :grep', 'Denite grep'],
+	\ ['line', 'Denite line'],
+	\ ['tag', 'Denite tag']
+	\ ]
+	let s:menus.others = {}
+	let s:menus.others.description = 'Others (command, command_history, help)'
+	let s:menus.others.command_candidates = [
+	\ ['command', 'Denite command'],
+	\ ['command_history', 'Denite command_history'],
+	\ ['help', 'Denite help']
+	\ ]
+	call denite#custom#var('menu', 'menus', s:menus)
+	" }}}
 '''
 # }}}
