--- a/dein/lazy.toml
+++ b/dein/lazy.toml
@@ -37,7 +37,6 @@ hook_add = '''
 '''
 # }}}
 # LANG {{{
-
 ## Golang
 [[plugins]]
 repo = 'fatih/vim-go'
@@ -71,12 +70,7 @@ on_cmd = 'MarkdownPreview'
 # EditorConfig {{{
 [[plugins]]
 repo = 'editorconfig/editorconfig-vim'
-#on_path = '.*'
-#hook_source = '''
-#	if dein#tap('gina.vim')
-#		let g:EditorConfig_exclude_patterns = ['gina://.*']
-#	endif
-#'''
+on_path = '.*'
 # }}}
 # file {{{
 [[plugins]]
@@ -168,7 +162,6 @@ hook_add = '''
 # denite {{{
 [[plugins]]
 repo = 'Shougo/denite.nvim'
-rev = 'ui'
 on_cmd = 'Denite'
 hook_add = '''
 	nnoremap [denite] <Nop>
