--- a/dein/lazy.toml
+++ b/dein/lazy.toml
@@ -61,6 +61,7 @@ hook_source = '''
 
 [[plugins]]
 repo = 'iamcco/markdown-preview.nvim'
+if = 'empty("$SSH_TTY")'
 hook_post_update = '!cd app && ./install.sh'
 on_cmd = 'MarkdownPreview'
 # }}}
@@ -71,31 +72,31 @@ on_path = '.*'
 # }}}
 # file {{{
 [[plugins]]
+repo = 'ms-jpq/chadtree'
+on_cmd = 'CHADopen'
+
+[[plugins]]
 repo ='Shougo/defx.nvim'
 on_cmd = 'Defx'
 depends = ['defx-icons', 'defx-git']
 hook_add = '''
-	nnoremap <silent> <Space>f :<C-u>Defx -listed -resume -buffer-name=tab`tabpagenr()`<CR>
+	nnoremap <silent> <Space>f :<C-u>Defx -listed -resume -buffer-name=win-`win_getid()`<CR>
 '''
 hook_source = '''
 	function! Root(path) abort
 		return fnamemodify(a:path, ':t')
 	endfunction
-
 	call defx#custom#source('file', {
 			\ 'root': 'Root',
 			\})
-
 	call defx#custom#column('filename', {
 			\ 'directory_icon': '',
 			\ 'opened_icon': '',
 			\ })
-
 	call defx#custom#column('mark', {
 			\ 'readonly_icon': '✗',
 			\ 'selected_icon': '✓',
 			\ })
-
 	call defx#custom#option('_', {
 			\ 'columns': 'indent:git:icons:filename',
 			\ 'show_ignored_files': 1,
@@ -108,16 +109,13 @@ defx = '''
 	nnoremap <silent><buffer><expr> j line('.') == line('$') ? 'gg' : 'j'
 	nnoremap <silent><buffer><expr> k line('.') == 1 ? 'G' : 'k'
 	nnoremap <silent><buffer><expr> l defx#async_action('open')
-
 	nnoremap <silent><buffer><expr> . defx#do_action('toggle_ignored_files')
 	nnoremap <silent><buffer><expr> <Tab> winnr('$') != 1 ? ':<C-u>wincmd w<CR>' : ':<C-u>Defx -buffer-name=temp -split=vertical<CR>'
 	nnoremap <silent><buffer><expr> <Space> defx#do_action('toggle_select') . 'j'
 	nnoremap <silent><buffer><expr> <CR> defx#do_action('open')
 	nnoremap <silent><buffer><expr> q defx#do_action('quit')
-
 	nnoremap <silent><buffer><expr> o defx#async_action('open_or_close_tree')
 	nnoremap <silent><buffer><expr> O defx#async_action('open_tree_recursive')
-
 	nnoremap <silent><buffer><expr> ! defx#do_action('execute_command')
 	nnoremap <silent><buffer><expr> * defx#do_action('toggle_select_all')
 	nnoremap <silent><buffer><expr> <C-g> defx#do_action('print')
