--- a/dein/lazy.toml
+++ b/dein/lazy.toml
@@ -1,8 +1,10 @@
-[[plugins]] # dein.vim command
-repo = 'haya14busa/dein-command.vim'
-on_cmd = 'Dein'
-
-# motion {{{
+# vim:foldmethod=marker:
+# EditorConfig {{{
+[[plugins]]
+repo = 'editorconfig/editorconfig-vim'
+on_path = '.*'
+# }}}
+# Motion {{{
 [[plugins]] # 上下移動改善
 repo = 'rhysd/accelerated-jk'
 on_map = {n = '<Plug>(accelerated'}
@@ -37,12 +39,31 @@ hook_add = '''
 '''
 # }}}
 # LANG {{{
+[[plugins]]
+repo = 'nvim-treesitter/nvim-treesitter'
+if = 'v:false'
+on_event = 'BufRead'
+hook_post_update = 'TSUpdate'
+hook_source = '''
+lua <<EOF
+	require'nvim-treesitter.configs'.setup {
+		ensure_installed = "maintained",
+		highlight = { enable = true },
+		indent = { enable = true }
+	}
+EOF
+
+set foldmethod=expr
+set foldexpr=nvim_treesitter#foldexpr()
+'''
+
 ## Golang
 [[plugins]]
 repo = 'mattn/vim-goimports'
+if = 'executable("goimports")'
 on_ft = 'go'
 
-## : Markdown
+## Markdown
 [[plugins]]
 repo = 'rhysd/vim-gfm-syntax'
 on_ft = 'markdown'
@@ -59,20 +80,17 @@ hook_source = '''
 	\]
 '''
 
+# Markdown
 [[plugins]]
 repo = 'iamcco/markdown-preview.nvim'
 if = 'empty("$SSH_TTY")'
 hook_post_update = '!cd app && ./install.sh'
 on_cmd = 'MarkdownPreview'
 # }}}
-# EditorConfig {{{
+# Filer {{{
 [[plugins]]
-repo = 'editorconfig/editorconfig-vim'
-on_path = '.*'
-# }}}
-# file {{{
-[[plugins]]
-repo ='Shougo/defx.nvim'
+repo = 'Shougo/defx.nvim'
+if = 'v:false'
 on_cmd = 'Defx'
 depends = ['defx-icons', 'defx-git']
 hook_add = '''
@@ -135,12 +153,14 @@ defx = '''
 
 [[plugins]]
 repo = 'kristijanhusak/defx-icons'
+if = 'v:false'
 hook_add = '''
 	let g:defx_icons_column_length = 2
 '''
 
 [[plugins]]
-repo ='kristijanhusak/defx-git'
+repo = 'kristijanhusak/defx-git'
+if = 'v:false'
 hook_add = '''
 	let g:defx_git#indicators = {
 		\ 'Modified'  : '+',
@@ -153,7 +173,7 @@ hook_add = '''
 		\ }
 '''
 # }}}
-# denite {{{
+# Fuzzy {{{
 [[plugins]]
 repo = 'Shougo/denite.nvim'
 on_cmd = 'Denite'
@@ -216,6 +236,13 @@ hook_post_source = '''
 			\ 'source_names': 'short',
 			\ 'split': 'floating',
 			\ })
+
+	" Denite menu {{{
+	let s:menus = {}
+
+
+	call denite#custom#var('menu', 'menus', s:menus)
+	" }}}
 '''
 [plugins.ftplugin]
 denite = '''
