--- a/dein/python.toml
+++ b/dein/python.toml
@@ -64,8 +64,30 @@ hook_source = '''
 # }}}
 # Filer {{{
 [[plugins]]
-repo = 'Shougo/defx.nvim'
+repo = 'kristijanhusak/defx-icons'
 if = 'v:false'
+hook_add = '''
+	let g:defx_icons_column_length = 2
+'''
+
+[[plugins]]
+repo = 'kristijanhusak/defx-git'
+if = 'v:false'
+hook_add = '''
+	let g:defx_git#indicators = {
+		\ 'Modified'  : '+',
+		\ 'Staged'    : '●',
+		\ 'Untracked' : '?',
+		\ 'Renamed'   : '➜',
+		\ 'Unmerged'  : '═',
+		\ 'Deleted'   : 'x',
+		\ 'Unknown'   : '?'
+		\ }
+'''
+
+[[plugins]]
+repo = 'Shougo/defx.nvim'
+if = 'v:false' # TODO: 設定次第
 on_cmd = 'Defx'
 depends = ['defx-icons', 'defx-git']
 hook_add = '''
@@ -124,28 +146,6 @@ defx = '''
 	nnoremap <silent><buffer><expr> sl defx#do_action('load_session')
 	nnoremap <silent><buffer><expr> x defx#do_action('execute_system')
 	nnoremap <silent><buffer><expr> yy defx#do_action('yank_path')
-'''
-
-[[plugins]]
-repo = 'kristijanhusak/defx-icons'
-if = 'v:false'
-hook_add = '''
-	let g:defx_icons_column_length = 2
-'''
-
-[[plugins]]
-repo = 'kristijanhusak/defx-git'
-if = 'v:false'
-hook_add = '''
-	let g:defx_git#indicators = {
-		\ 'Modified'  : '+',
-		\ 'Staged'    : '●',
-		\ 'Untracked' : '?',
-		\ 'Renamed'   : '➜',
-		\ 'Unmerged'  : '═',
-		\ 'Deleted'   : 'x',
-		\ 'Unknown'   : '?'
-		\ }
 '''
 # }}}
 # Fuzzy {{{
